--- a/src/usr_01.tex
+++ b/src/usr_01.tex
@@ -81,7 +81,7 @@ Amiga:
 
 If the file already exists you probably want to keep it.
 
-If you start Vim now, the 'compatible' option should be off.
+If you start Vim now, the \verb!'compatible'! option should be off.
 You can check it with this command:
 
 \begin{verbatim}
@@ -99,7 +99,7 @@ Use this command to find out:
 \end{verbatim}
 
 If your file is not in the list, check its location and name.
-If it is in the list, there must be some other place where the 'compatible' option is switched back on.
+If it is in the list, there must be some other place where the \verb!'compatible'! option is switched back on.
 
 For more info see |vimrc| and |\verb!:h compatible-default!|.
 
