--- a/src/usr_02.tex
+++ b/src/usr_02.tex
@@ -507,7 +507,7 @@ To find what the -t argument does, for example, use the command:
 
 The Vim editor has a number of options that enable you to configure and customize the editor.
 If you want help for an option, you need to enclose it in single quotation marks.
-To find out what the 'number' option does, for example, use the following command: 
+To find out what the \verb!'number'! option does, for example, use the following command: 
 
  \begin{Verbatim}[samepage=true]
  :help 'number'
@@ -549,7 +549,7 @@ You can use the error ID at the start to find help about it:
 				\texttt{:help i\_abc}  \texttt{:help i\_CTRL-B} & The same in Insert mode. \\ \hline
 				\texttt{:help v\_abc}  \texttt{:help v\_CTRL-B} & The same in Visual mode. \\ \hline
 				\texttt{:help c\_abc}  \texttt{:help c\_CTRL-B} & The same in Command-line mode. \\ \hline
-				\texttt{:help 'subject'} & Option 'subject'.\\ \hline
+				\texttt{:help 'subject'} & Option \verb!'subject'!.\\ \hline
 				\texttt{:help subject()} & Function "subject".\\ \hline
 				\texttt{:help -subject} & Command-line option "-subject".\\ \hline
 				\texttt{:help +subject} & Compile-time feature "+subject".\\ \hline
