--- a/src/usr_29.tex
+++ b/src/usr_29.tex
@@ -118,7 +118,7 @@ If a count is specified, the new window will be that many lines high.
 When you have files in many directories, you can create a tags file in each of them.
 Vim will then only be able to jump to tags within that directory.
 
-To find more tags files, set the 'tags' option to include all the relevant tags files.
+To find more tags files, set the \verb!'tags'! option to include all the relevant tags files.
 Example:
 
 \begin{Verbatim}[samepage=true]
@@ -270,12 +270,12 @@ Move the cursor to the line that contains the function you want to go to.
 Now press <Enter>.
 Vim will go to the other window and jump to the selected function.
 \subsubsection{Related items}
-You can set 'ignorecase' to make case in tag names be ignored.
+You can set \verb!'ignorecase'! to make case in tag names be ignored.
 
-The 'tagbsearch' option tells if the tags file is sorted or not.
+The \verb!'tagbsearch'! option tells if the tags file is sorted or not.
 The default is to assume a sorted tags file, which makes a tags search a lot faster, but doesn't work if the tags file isn't sorted.
 
-The 'taglength' option can be used to tell Vim the number of significant characters in a tag.
+The \verb!'taglength'! option can be used to tell Vim the number of significant characters in a tag.
 
 When you use the SNiFF+ program, you can use the Vim interface to it |\verb!:h sniff!|.
 SNiFF+ is a commercial program.
@@ -336,7 +336,7 @@ This will show the "\verb!stdio.h!" file in the preview window, with the functio
     FILE    *popen __P((const char *, const char *)); 
 \end{Verbatim}
 
-You can specify the height of the preview window, when it is opened, with the 'previewheight' option.
+You can specify the height of the preview window, when it is opened, with the \verb!'previewheight'! option.
 \subsection{Moving through a program}
 Since a program is structured, Vim can recognize items in it.
 Specific commands can be used to move around.
@@ -499,11 +499,11 @@ Also when the tags file is out of date.
 Also when you don't have tags for the included files.
 
 However, a few things must be right for "\verb![I!" to do its work.
-First of all, the 'include' option must specify how a file is included.
+First of all, the \verb!'include'! option must specify how a file is included.
 The default value works for C and C++.
 For other languages you will have to change it.
 \subsubsection{Locating included files}
-Vim will find included files in the places specified with the 'path' option.
+Vim will find included files in the places specified with the \verb!'path'! option.
 If a directory is missing, some include files will not be found.
 You can discover this with this command:
 
@@ -532,7 +532,7 @@ Vim is not a compiler.
 It does not recognize "\verb!#ifdef!" statements.
 This means every "\verb!#include!" statement is used, also when it comes after "\verb!#if NEVER!".
 
-To fix the files that could not be found, add a directory to the 'path' option.
+To fix the files that could not be found, add a directory to the \verb!'path'! option.
 A good place to find out about this is the Makefile.
 Look out for lines that contain "\verb!-I!" items, like "\verb!-I/usr/local/X11!".
 To add this directory use:
@@ -568,7 +568,7 @@ This will find files in the directories:
 \end{Verbatim}
 
 There are even more possibilities.
-Check out the 'path' option for info.
+Check out the \verb!'path'! option for info.
 
 If you want to see which included files are actually found, use this command:
 
@@ -615,7 +615,7 @@ To find only macros, defined with "\verb!#define!" use:
 \end{Verbatim}
 
 Again, this searches in included files.
-The 'define' option specifies what a line looks like that defines the items for "\verb![D!".
+The \verb!'define'! option specifies what a line looks like that defines the items for "\verb![D!".
 You could change it to make it work with other languages than C or C++.
 
 The commands related to "\verb![D!" are:
